<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">加班宝</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="add">添加</string>
    <string name="done">完成</string>
    <string name="my">我的</string>
    <string name="register">注册</string>
    <string name="share">分享</string>
    <string name="realname">姓名</string>
    <string name="phone">手机号码</string>
    <string name="user_register_tips">我已使用真实信息注册</string>
    <string name="cannot_empty"><xliff:g id="x">%s</xliff:g>不能为空</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_incorrect">确认密码不一致</string>
    <string name="format_error"><xliff:g id="x">%s</xliff:g>格式错误</string>
    <string name="connection_server_failed">连接服务器失败</string>
    <string name="registering">注册中</string>
    <string name="logining">登录中</string>
    <string name="login_failed">登录失败</string>
    <string name="new_apply">新申请</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="send">提交</string>
    <string name="submit">提交</string>
    <string name="overtime_content">加班内容</string>
    <string name="hint_project_name">如项目名称</string>
    <string name="director">审批人</string>
    <string name="overtime_form_tips">我确认以上信息真实无误</string>
    <string name="help">帮助</string>
    <string name="positive">确定</string>
    <string name="load_directors_fail">加载主管数据失败</string>
    <string name="applying">申请中</string>
    <string name="overtime_detail">加班详情</string>
    <string name="audit_overtime">审核加班</string>
    <string name="edit">编辑</string>
    <string name="edit_apply">编辑申请</string>
    <string name="accept">通过</string>
    <string name="reject">拒绝</string>
    <string name="operation_success">操作成功</string>
    <string name="logout">注销</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="push_setting">推送设置</string>
    <string name="enable_push">开启推送</string>
    <string name="silent">免打扰</string>
    <string name="update_setting">更新设置</string>
    <string name="enable_autoupdate">自动更新</string>
    <string name="check_update">检查更新</string>
    <string name="feed_back">反馈建议</string>
</resources>
