<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_padding">

    <include layout="@layout/form_login" />
    <EditText
        android:id="@+id/txtRealname"
        android:inputType="textPersonName"
        android:hint="@string/realname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/txtPhone"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:checked="true"
        android:id="@+id/checkRealInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_register_tips"/>
    <Button
        android:layout_marginTop="@dimen/btn_edittext_marginTop"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_corner_green"
        android:text="@string/register"
        android:textColor="@android:color/white" />
</LinearLayout>